# backup-archive

./: .gitignore  configure.ac
debian/: autoreconf.after  autoreconf.before  changelog  control  debhelper-build-stamp  files
debian/backup-archive/DEBIAN/: control  md5sums
debian/backup-archive/usr/share/doc/backup-archive/: README
debian/backup-archive/usr/share/guile/site/2.0/backup-archive/: cli.scm  find.scm  profile.scm
module/: Makefile.am
module/backup-archive/: archive.scm  backup.scm  cli.scm  common.scm  config.scm  find.scm  message.scm  profile.scm  program.scm  shell.scm
profiles/: test1  test2
src/: Makefile.am  backup-archive
