include $(top_srcdir)/guile.am

SOURCES = backup-archive/program.scm \
          backup-archive/message.scm \
	  backup-archive/common.scm \
          backup-archive/shell.scm \
          backup-archive/profile.scm \
          backup-archive/config.scm \
          backup-archive/find.scm \
	  backup-archive/archive.scm \
          backup-archive/cli.scm

